Fixed About page views on small mobile devices and tablets.

--- a/CSS/via_style.css
+++ b/CSS/via_style.css
@@ -139,7 +139,7 @@ footer {
     display: grid;
     grid-gap: 1em;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 100px 1fr 1fr 1fr 100px;
+    grid-template-rows: 100px repeat(3, 1fr) 100px;
     grid-template-areas:
     "logo nav nav"
     "img img img"
@@ -215,6 +215,13 @@ footer {
   }
 
 }
+
+@media only screen and (min-width: 800px){
+
+  #container {
+    grid-template-rows: 100px repeat(3, 18em) 100px;
+  }
+
 
 @media only screen and (min-width: 1025px) {
 
