--- a/CSS/via_style_about.css
+++ b/CSS/via_style_about.css
@@ -100,6 +100,30 @@ footer {
   padding: 20px;
 }
 
+.mobileFooter {
+  display: flex;
+  flex-direction: column;
+}
+
+.socialMenuMobile {
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+}
+
+.followMe {
+  font-family: Spartan;
+  text-align: center;
+  background-color: black;
+  color: white;
+  font-size: 15px;
+}
+
+.iconSocialMobile {
+  height: 4em;
+  object-fit: contain;
+  margin-bottom: 10px;
+}
 /* Things to ignore */
 
 .phoneNum {
@@ -117,15 +141,15 @@ footer {
   #container {
     display: grid;
     grid-gap: 1em;
-    grid-template-columns: 1fr 300px 1fr;
-    grid-template-rows: 100px 300px 1fr 1fr 100px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 100px 300px 1fr 100px;
     grid-template-areas:
         "logo nav nav"
         ".... img ..."
         "txt txt txt"
-        "... ... ..."
-        "f-text f-text foot";
-    height: 100vh;
+        "f-text f-text f-text"
+        "foot foot social";
+    height: 1024px;
   }
 
 /****************************************************************************** Grid Area Assignments */
@@ -148,11 +172,26 @@ footer {
 
   footer {
     grid-area: f-text;
-    border-radius: 0 15px 0 0;
+    border-radius: 0 15px 15px 0;
+  }
+
+  .socialMenuMobile {
+    grid-area: social;
+    border-radius: 15px 15px 0 0;
+  }
+
+  .mobileFooterText {
+    margin: 0.5em;
+}
+
+  .iconSocialMobile {
+    height: 4.5em;
+    margin: 0px;
   }
 
   .foot-nav-container {
     grid-area: foot;
+    padding: 10px;
   }
 
 /****************************************************************************** Main Navigation Bar and Button Styles */
@@ -184,7 +223,7 @@ footer {
   }
 
   .icon {
-    width: 70%;
+    width: 50%;
   }
 
   .contactBar {
